cmake_minimum_required(VERSION 3.10)
project(csapp C)

set(CMAKE_C_STANDARD 99)

add_executable(csapp main.c)


add_executable(em2_4 chap2/em2_4.c)
add_executable(myem2_1 chap2/myem2_1.c)
add_executable(myem2_2 chap2/myem2_2.c)

add_executable(ex2_7 chap2/ex2_7.c)
add_executable(ex2_10 chap2/ex2_10.c)
add_executable(ex2_11 chap2/ex2_11.c)
add_executable(ex2_12 chap2/ex2_12.c)
add_executable(ex2_14 chap2/ex2_14.c)
add_executable(ex2_15 chap2/ex2_15.c)
add_executable(ex2_25 chap2/ex2_25.c)